--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
             transition: transform 0.6s ease, opacity 0.6s ease;
         }
 
+        @media (max-width: 768px) {
+          .card {
+            width: 80%
+          }
+        }
+
         .card.hidden {
             opacity: 0;
             transform: rotateY(90deg);
