--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         .question-container {
             font-weight: bold;
             font-size: 18px;
-            color: #8b0000; 
+            color: #000; 
             text-align: left;
             margin-top: 32px;
         }
