--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 16px;
+            font-size: 24px;
+            text-transform: uppercase;
         }
 
         .shuffle-button:hover {
