--- a/index.html
+++ b/index.html
@@ -2182,23 +2182,13 @@
 ]
 
 
-let currentCardIndex = 0;
+        let currentCardIndex = 0;
 
-function shuffleArrayExcludingCurrent(array, excludeIndex) {
-    // Create a new array excluding the current card
-    let arrayExcludingCurrent = array.filter((_, index) => index !== excludeIndex);
-
-    // Shuffle the reduced array
-    for (let i = arrayExcludingCurrent.length - 1; i > 0; i--) {
-        let j = Math.floor(Math.random() * (i + 1));
-        [arrayExcludingCurrent[i], arrayExcludingCurrent[j]] = [arrayExcludingCurrent[j], arrayExcludingCurrent[i]];
+function shuffleArray(array) {
+    for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
     }
-
-    // Add the excluded card back to the original array
-    const shuffledArray = [...arrayExcludingCurrent];
-    shuffledArray.splice(Math.floor(Math.random() * shuffledArray.length), 0, array[excludeIndex]);
-
-    return shuffledArray;
 }
 
 function shuffleAndShowCard() {
@@ -2206,18 +2196,12 @@ function shuffleAndShowCard() {
     cardContainer.classList.add('hidden');
 
     setTimeout(() => {
-        // Shuffle the array while excluding the current card
-        const shuffledCards = shuffleArrayExcludingCurrent(cards, currentCardIndex);
-        cards = shuffledCards;
-
-        // Update the current card index to the next card
-        currentCardIndex = (currentCardIndex + 1) % cards.length;
-
+        shuffleArray(cards);
+        currentCardIndex = 0;
         showCard(cards[currentCardIndex]);
         cardContainer.classList.remove('hidden');
     }, 600); // Matches animation duration
 }
-
 
 function showCard(card) {
     const cardContainer = document.getElementById('card-container');
