--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
             font-size: 18px;
             color: #000; 
             text-align: left;
+            margin-top: 32px;
             letter-spacing: 1.5px;
         }
         .reference {
@@ -1662,7 +1663,7 @@
           id: 191,
           title: "Celebrate Iterative Design",
           content: "Showcasing multiple versions highlights the evolution of an idea.",
-          example: "The *Design Museum’s* exhibits often feature prototype iterations alongside finished products, celebrating the creative process.",
+          example: "The `Design Museum’s` exhibits often feature prototype iterations alongside finished products, celebrating the creative process.",
           insight: "Iteration shows the value of refinement and persistence.",
           prompt: "How can you incorporate iterative versions to show growth in your project?"
         },
@@ -2212,7 +2213,6 @@ function showCard(card) {
       <p>${card.content}</p>
       <p class="quote-container">${card.example}</p>
       <p>${card.insight}</p>
-      <br/>
       <p class="question-container">${card.prompt}</p>
     `;
 }
