--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         .card {
             width: 400px;
-            height: 550px;
+            height: 500px;
             padding: 20px;
             background: white;
             border: 2px solid #000;
@@ -2178,7 +2178,79 @@
           example: "Netflix’s monthly subscription allows users to watch unlimited content, removing barriers to exploration and encouraging regular use.",
           insight: "Unlimited access fosters loyalty and makes the service indispensable.",
           prompt: "How can you offer unlimited access to make your project essential to your audience?"
-        }
+        },
+        {
+          id: 256,
+          title: "Illuminate the World",
+          content: "Revolutionary ideas often come from building on existing innovations to solve pressing challenges.",
+          "example": "Joseph Swan and Thomas Edison independently developed practical electric light bulbs, transforming how people lived and worked after dark.",
+          insight: "Collaboration or parallel innovation can lead to transformative solutions.",
+          prompt: "How can you build on existing ideas to create something groundbreaking?"
+        },
+        {
+          id: 257,
+          title: "Connect the World",
+          content: "Enabling global communication redefines how societies interact and share knowledge.",
+          "example": "Tim Berners-Lee invented the World Wide Web, creating a platform for sharing information instantly and universally.",
+          insight: "Creating universal systems fosters unprecedented connectivity and collaboration.",
+          prompt: "What universal platform can you create to bridge gaps in communication or access?"
+        },
+        {
+          id: 258,
+          title: "Think in Systems",
+          content: "Integrating different components into cohesive systems leads to scalable solutions.",
+          "example": "Henry Ford’s assembly line streamlined car manufacturing, making automobiles affordable and accessible to the masses.",
+          insight: "Systematic approaches create efficiency and scale in production and delivery.",
+          prompt: "How can you design systems to simplify and scale your project?"
+        },
+        {
+          id: 259,
+          title: "Challenge Norms",
+          content: "Daring to defy conventions can lead to significant breakthroughs.",
+          "example": "Marie Curie’s pioneering research on radioactivity challenged prevailing scientific norms, earning her two Nobel Prizes and advancing medical and scientific fields.",
+          insight: "Challenging established norms opens pathways to discovery and progress.",
+          prompt: "What convention can you challenge to innovate in your field?"
+        },
+        {
+          id: 260,
+          title: "Democratize Knowledge",
+          content: "Making knowledge accessible to all empowers societies and drives progress.",
+          "example": "Johannes Gutenberg’s invention of the printing press made books widely available, democratizing education and information.",
+          insight: "Accessibility to knowledge fosters innovation and empowerment on a global scale.",
+          prompt: "How can you make critical knowledge more accessible in your domain?"
+        },
+        {
+          id: 261,
+          title: "Invent the Future",
+          content: "Innovators who foresee and address future needs shape the course of history.",
+          "example": "Nikola Tesla’s visionary work on alternating current (AC) and wireless energy laid the foundation for modern electrical systems.",
+          insight: "Anticipating future needs positions you as a pioneer in your field.",
+          prompt: "What future need can you address with your innovations?"
+        },
+        {
+          id: 262,
+          title: "Make the Impossible Possible",
+          content: "Dreaming big and pursuing uncharted paths can redefine human potential.",
+          "example": "The Wright brothers’ invention of the airplane transformed human mobility, proving that powered flight was achievable.",
+          insight: "Bold aspirations often lead to groundbreaking achievements.",
+          prompt: "What bold vision can you pursue to redefine the boundaries of possibility?"
+        },
+        {
+          id: 263,
+          title: "Create Standards for Progress",
+          content: "Establishing standards enables consistent growth and innovation across industries.",
+          example: "Eli Whitney’s invention of interchangeable parts revolutionized manufacturing, making mass production efficient and scalable.",
+          insight: "Standards create reliability, scalability, and innovation potential.",
+          prompt: "What standards can you introduce to improve consistency and innovation?"
+        },
+        {
+          id: 264,
+          title: "Simplify Everyday Tasks",
+          content: "Improving mundane tasks can elevate overall quality of life.",
+          example: "King Camp Gillette’s invention of the safety razor made shaving safer and more convenient, revolutionizing personal grooming.",
+          insight: "Simplifying daily tasks can create widespread adoption and impact.",
+          prompt: "What everyday process can you simplify to improve user experience?"
+        },
 ]
 
 
