--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         }
 
         .card {
-            width: 400px;
-            height: 500px;
+            width: 350px;
+            height: auto;
             padding: 20px;
             background: white;
             border: 2px solid #000;
