--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         }
 
         .card {
-            width: 350px;
-            height: auto;
+            width: 400px;
+            height: 500px;
             padding: 20px;
             background: white;
             border: 2px solid #000;
@@ -2183,7 +2183,7 @@
           id: 256,
           title: "Illuminate the World",
           content: "Revolutionary ideas often come from building on existing innovations to solve pressing challenges.",
-          "example": "Joseph Swan and Thomas Edison independently developed practical electric light bulbs, transforming how people lived and worked after dark.",
+          example: "Joseph Swan and Thomas Edison independently developed practical electric light bulbs, transforming how people lived and worked after dark.",
           insight: "Collaboration or parallel innovation can lead to transformative solutions.",
           prompt: "How can you build on existing ideas to create something groundbreaking?"
         },
@@ -2191,7 +2191,7 @@
           id: 257,
           title: "Connect the World",
           content: "Enabling global communication redefines how societies interact and share knowledge.",
-          "example": "Tim Berners-Lee invented the World Wide Web, creating a platform for sharing information instantly and universally.",
+          example: "Tim Berners-Lee invented the World Wide Web, creating a platform for sharing information instantly and universally.",
           insight: "Creating universal systems fosters unprecedented connectivity and collaboration.",
           prompt: "What universal platform can you create to bridge gaps in communication or access?"
         },
@@ -2199,7 +2199,7 @@
           id: 258,
           title: "Think in Systems",
           content: "Integrating different components into cohesive systems leads to scalable solutions.",
-          "example": "Henry Ford’s assembly line streamlined car manufacturing, making automobiles affordable and accessible to the masses.",
+          example: "Henry Ford’s assembly line streamlined car manufacturing, making automobiles affordable and accessible to the masses.",
           insight: "Systematic approaches create efficiency and scale in production and delivery.",
           prompt: "How can you design systems to simplify and scale your project?"
         },
@@ -2207,7 +2207,7 @@
           id: 259,
           title: "Challenge Norms",
           content: "Daring to defy conventions can lead to significant breakthroughs.",
-          "example": "Marie Curie’s pioneering research on radioactivity challenged prevailing scientific norms, earning her two Nobel Prizes and advancing medical and scientific fields.",
+          example: "Marie Curie’s pioneering research on radioactivity challenged prevailing scientific norms, earning her two Nobel Prizes and advancing medical and scientific fields.",
           insight: "Challenging established norms opens pathways to discovery and progress.",
           prompt: "What convention can you challenge to innovate in your field?"
         },
@@ -2215,7 +2215,7 @@
           id: 260,
           title: "Democratize Knowledge",
           content: "Making knowledge accessible to all empowers societies and drives progress.",
-          "example": "Johannes Gutenberg’s invention of the printing press made books widely available, democratizing education and information.",
+          example: "Johannes Gutenberg’s invention of the printing press made books widely available, democratizing education and information.",
           insight: "Accessibility to knowledge fosters innovation and empowerment on a global scale.",
           prompt: "How can you make critical knowledge more accessible in your domain?"
         },
@@ -2223,7 +2223,7 @@
           id: 261,
           title: "Invent the Future",
           content: "Innovators who foresee and address future needs shape the course of history.",
-          "example": "Nikola Tesla’s visionary work on alternating current (AC) and wireless energy laid the foundation for modern electrical systems.",
+          example: "Nikola Tesla’s visionary work on alternating current (AC) and wireless energy laid the foundation for modern electrical systems.",
           insight: "Anticipating future needs positions you as a pioneer in your field.",
           prompt: "What future need can you address with your innovations?"
         },
@@ -2231,7 +2231,7 @@
           id: 262,
           title: "Make the Impossible Possible",
           content: "Dreaming big and pursuing uncharted paths can redefine human potential.",
-          "example": "The Wright brothers’ invention of the airplane transformed human mobility, proving that powered flight was achievable.",
+          example: "The Wright brothers’ invention of the airplane transformed human mobility, proving that powered flight was achievable.",
           insight: "Bold aspirations often lead to groundbreaking achievements.",
           prompt: "What bold vision can you pursue to redefine the boundaries of possibility?"
         },
@@ -2250,6 +2250,126 @@
           example: "King Camp Gillette’s invention of the safety razor made shaving safer and more convenient, revolutionizing personal grooming.",
           insight: "Simplifying daily tasks can create widespread adoption and impact.",
           prompt: "What everyday process can you simplify to improve user experience?"
+        },
+        {
+          id: 265,
+          title: "Master the Unknown",
+          content: "Exploring uncharted territories pushes boundaries and fosters discovery.",
+          example: "Ernest Shackleton’s Antarctic expeditions demonstrated resilience and innovative problem-solving under extreme conditions.",
+          insight: "Embracing the unknown can lead to groundbreaking solutions and leadership.",
+          prompt: "What uncharted territory can you explore to push your project’s limits?"
+        },
+        {
+          id: 266,
+          title: "Inspire Revolutionary Ideas",
+          content: "Bold actions often redefine what’s possible and inspire future generations.",
+          example: "Rosa Parks’ refusal to give up her seat on a segregated bus became a catalyst for the Civil Rights Movement, reshaping societal norms.",
+          insight: "Small, bold actions can create ripple effects that lead to transformative change.",
+          prompt: "What bold stand can you take to redefine norms in your field?"
+        },
+        {
+          id: 267,
+          title: "Simplify to Scale",
+          content: "Reducing complexity enables global adoption and impact.",
+          example: "Charles Babbage’s vision of the analytical engine simplified computation, laying the groundwork for modern computers.",
+          insight: "Simplifying core processes enables scaling and wider applicability.",
+          prompt: "What aspects of your project can you simplify to broaden its reach?"
+        },
+        {
+          id: 268,
+          title: "Design for Humanity",
+          content: "User-centric designs ensure accessibility and adoption.",
+          example: "Alexander Graham Bell’s invention of the telephone revolutionised global communication, addressing the fundamental human need to connect.",
+          insight: "Innovations that address basic human needs have universal appeal.",
+          prompt: "How can your design better meet fundamental human needs?"
+        },
+        {
+          id: 269,
+          title: "Leverage Spontaneity",
+          content: "Allowing room for improvisation can lead to unexpected brilliance.",
+          example: "Miles Davis embraced improvisation in his recordings, influencing generations of jazz musicians and redefining the genre.",
+          insight: "Spontaneity fosters innovation and fresh perspectives.",
+          prompt: "How can you incorporate spontaneity to unlock new possibilities in your project?"
+        },
+        {
+          id: 270,
+          title: "Build Cultural Bridges",
+          content: "Writing that incorporates diverse cultural perspectives fosters understanding and unity.",
+          example: "Chinua Achebe’s `Things Fall Apart` explores the clash between traditional Igbo society and colonial forces, bridging cultural divides.",
+          insight: "Highlighting cultural diversity enriches storytelling and broadens its impact.",
+          "prompt": "How can your work build bridges between cultures or perspectives?"
+        },
+        {
+          id: 271,
+          title: "Explore Psychological Depth",
+          content: "Focusing on complex characters and their inner lives engages readers and adds layers to storytelling.",
+          example: "Fyodor Dostoevsky’s `Crime and Punishment` examines guilt and morality through the lens of its conflicted protagonist.",
+          insight: "Psychological depth fosters empathy and keeps readers invested.",
+          "prompt": "How can you explore the inner lives of your characters to add complexity to your work?"
+        },
+        {
+          id: 272,
+          title: "Write for Specific Audiences",
+          content: "Tailoring content to niche audiences fosters loyalty and deep engagement.",
+          example: "Agatha Christie’s mysteries cater to fans of intricate, plot-driven detective stories, making her one of the best-selling authors in history.",
+          insight: "Understanding your audience enables focused and effective storytelling.",
+          "prompt": "What specific audience can you target to maximize the impact of your project?"
+        },
+        {
+          id: 273,
+          title: "Experiment with Style",
+          content: "Innovating with narrative structure or style can redefine how stories are told.",
+          example: "James Joyce’s `Ulysses` pushed the boundaries of narrative with stream-of-consciousness techniques, influencing modernist literature.",
+          insight: "Experimentation with form can create groundbreaking and memorable works.",
+          "prompt": "What narrative style can you experiment with to challenge traditional storytelling?"
+        },
+        {
+          id: 274,
+          title: "Channel Personal Experiences",
+          content: "Drawing from personal life adds authenticity and relatability to creative works.",
+          example: "Ernest Hemingway’s `A Farewell to Arms` reflects his experiences as an ambulance driver in World War I, adding depth and realism to the narrative.",
+          insight: "Authenticity derived from personal experiences builds deeper connections with readers.",
+          "prompt": "What personal experiences can you draw from to enhance your project?"
+        },
+        {
+          id: 275,
+          title: "Address Universal Themes",
+          content: "Exploring themes like love, loss, or morality resonates across cultures and generations.",
+          example: "Jane Austen’s novels, such as `Pride and Prejudice`, delve into societal norms and human relationships, maintaining relevance centuries later.",
+          insight: "Universal themes create timeless connections with readers.",
+          "prompt": "What universal theme can you weave into your work to resonate deeply with audiences?"
+        },
+        {
+          id: 276,
+          title: "Adapt Across Media Contexts",
+          content: "Translating ideas between different media formats unlocks new possibilities.",
+          example: "`The Witcher` evolved from books to video games to a Netflix series, each medium adding unique layers to the story.",
+          insight: "Adapting across contexts allows stories to reach broader audiences.",
+          "prompt": "How can you reimagine your work in a different medium to enhance its impact?"
+        },
+        {
+          id: 277,
+          title: "Explore Technological Context",
+          content: "Leveraging available technology enhances creativity and execution.",
+          example: "James Cameron waited for advancements in CGI before making `Avatar`, ensuring the technology could bring his vision to life.",
+          insight: "Aligning with technological contexts can elevate your project’s execution.",
+          "prompt": "What technological advancements can you integrate into your project?"
+        },
+        {
+          id: 278,
+          title: "Adapt to Cultural Contexts",
+          content: "Tailoring creative works to fit cultural nuances ensures relevance and resonance.",
+          example: "Disney adapted `Zootopia` for different countries by changing key details, like replacing a moose with a panda for Chinese audiences.",
+          insight: "Considering cultural contexts enhances audience engagement and accessibility.",
+          "prompt": "How can you tailor your project to fit the cultural context of your audience?"
+        },
+        {
+          id: 279,
+          title: "Highlight Historical Context",
+          content: "Placing a narrative within a historical framework adds depth and authenticity.",
+          example: "Lin-Manuel Miranda’s `Hamilton` blends modern music with 18th-century history, making the founding era relevant to contemporary audiences.",
+          insight: "Historical context enriches storytelling and connects past and present.",
+          "prompt": "How can historical context add depth and authenticity to your work?"
         },
 ]
 
