--- a/index.html
+++ b/index.html
@@ -2297,7 +2297,7 @@
           content: "Writing that incorporates diverse cultural perspectives fosters understanding and unity.",
           example: "Chinua Achebe’s `Things Fall Apart` explores the clash between traditional Igbo society and colonial forces, bridging cultural divides.",
           insight: "Highlighting cultural diversity enriches storytelling and broadens its impact.",
-          "prompt": "How can your work build bridges between cultures or perspectives?"
+          prompt: "How can your work build bridges between cultures or perspectives?"
         },
         {
           id: 271,
@@ -2305,7 +2305,7 @@
           content: "Focusing on complex characters and their inner lives engages readers and adds layers to storytelling.",
           example: "Fyodor Dostoevsky’s `Crime and Punishment` examines guilt and morality through the lens of its conflicted protagonist.",
           insight: "Psychological depth fosters empathy and keeps readers invested.",
-          "prompt": "How can you explore the inner lives of your characters to add complexity to your work?"
+          prompt: "How can you explore the inner lives of your characters to add complexity to your work?"
         },
         {
           id: 272,
@@ -2313,7 +2313,7 @@
           content: "Tailoring content to niche audiences fosters loyalty and deep engagement.",
           example: "Agatha Christie’s mysteries cater to fans of intricate, plot-driven detective stories, making her one of the best-selling authors in history.",
           insight: "Understanding your audience enables focused and effective storytelling.",
-          "prompt": "What specific audience can you target to maximize the impact of your project?"
+          prompt: "What specific audience can you target to maximize the impact of your project?"
         },
         {
           id: 273,
@@ -2321,7 +2321,7 @@
           content: "Innovating with narrative structure or style can redefine how stories are told.",
           example: "James Joyce’s `Ulysses` pushed the boundaries of narrative with stream-of-consciousness techniques, influencing modernist literature.",
           insight: "Experimentation with form can create groundbreaking and memorable works.",
-          "prompt": "What narrative style can you experiment with to challenge traditional storytelling?"
+          prompt: "What narrative style can you experiment with to challenge traditional storytelling?"
         },
         {
           id: 274,
@@ -2329,7 +2329,7 @@
           content: "Drawing from personal life adds authenticity and relatability to creative works.",
           example: "Ernest Hemingway’s `A Farewell to Arms` reflects his experiences as an ambulance driver in World War I, adding depth and realism to the narrative.",
           insight: "Authenticity derived from personal experiences builds deeper connections with readers.",
-          "prompt": "What personal experiences can you draw from to enhance your project?"
+          prompt: "What personal experiences can you draw from to enhance your project?"
         },
         {
           id: 275,
@@ -2337,7 +2337,7 @@
           content: "Exploring themes like love, loss, or morality resonates across cultures and generations.",
           example: "Jane Austen’s novels, such as `Pride and Prejudice`, delve into societal norms and human relationships, maintaining relevance centuries later.",
           insight: "Universal themes create timeless connections with readers.",
-          "prompt": "What universal theme can you weave into your work to resonate deeply with audiences?"
+          prompt: "What universal theme can you weave into your work to resonate deeply with audiences?"
         },
         {
           id: 276,
@@ -2345,7 +2345,7 @@
           content: "Translating ideas between different media formats unlocks new possibilities.",
           example: "`The Witcher` evolved from books to video games to a Netflix series, each medium adding unique layers to the story.",
           insight: "Adapting across contexts allows stories to reach broader audiences.",
-          "prompt": "How can you reimagine your work in a different medium to enhance its impact?"
+          prompt: "How can you reimagine your work in a different medium to enhance its impact?"
         },
         {
           id: 277,
@@ -2353,7 +2353,7 @@
           content: "Leveraging available technology enhances creativity and execution.",
           example: "James Cameron waited for advancements in CGI before making `Avatar`, ensuring the technology could bring his vision to life.",
           insight: "Aligning with technological contexts can elevate your project’s execution.",
-          "prompt": "What technological advancements can you integrate into your project?"
+          prompt: "What technological advancements can you integrate into your project?"
         },
         {
           id: 278,
@@ -2361,7 +2361,7 @@
           content: "Tailoring creative works to fit cultural nuances ensures relevance and resonance.",
           example: "Disney adapted `Zootopia` for different countries by changing key details, like replacing a moose with a panda for Chinese audiences.",
           insight: "Considering cultural contexts enhances audience engagement and accessibility.",
-          "prompt": "How can you tailor your project to fit the cultural context of your audience?"
+          prompt: "How can you tailor your project to fit the cultural context of your audience?"
         },
         {
           id: 279,
@@ -2369,8 +2369,112 @@
           content: "Placing a narrative within a historical framework adds depth and authenticity.",
           example: "Lin-Manuel Miranda’s `Hamilton` blends modern music with 18th-century history, making the founding era relevant to contemporary audiences.",
           insight: "Historical context enriches storytelling and connects past and present.",
-          "prompt": "How can historical context add depth and authenticity to your work?"
+          prompt: "How can historical context add depth and authenticity to your work?"
         },
+        {
+          id: 280,
+          title: "Number Your Failures",
+          content: "Tracking and learning from repeated failures often leads to breakthroughs.",
+          example: "WD-40 gets its name from ‘Water Displacement, 40th Formula,’ signifying the 39 failed attempts before achieving success. This persistence turned it into a household staple.",
+          insight: "Embracing failure as part of the process builds resilience and innovation.",
+          prompt: "How can you document and learn from your failures to refine your approach?"
+        },
+        {
+          id: 281,
+          title: "Change Perspective",
+          content: "Reversing or altering a core element can unlock new creative possibilities.",
+          example: "Moby’s song ‘Porcelain’ features a reversed sample of Ernest Gold’s composition ‘Fight for Survival’ from the 1960 movie Exodus. This transformation shifts its emotional resonance, demonstrating how perspective changes can innovate creatively.",
+          insight: "Reframing an idea from a different angle can reveal hidden potential.",
+          prompt: "What aspect of your project can you reverse or reinterpret to discover new possibilities?"
+        },
+        {
+          id: 282,
+          title: "Market the Mundane",
+          content: "Uninspiring ideas can gain traction with creative marketing strategies.",
+          example: "Old Spice rebranded its classic men’s deodorant with quirky, over-the-top commercials like ‘The Man Your Man Could Smell Like,’ transforming a dated product into a cultural phenomenon.",
+          insight: "Effective marketing can transform even simple ideas into cultural phenomena.",
+          prompt: "How can you use bold or unexpected marketing to make your idea stand out?"
+        },
+        {
+          id: 283,
+          title: "Stand Out in Saturated Markets",
+          content: "Differentiation is crucial in crowded industries to capture attention.",
+          example: "Oatly disrupted the plant-based milk market with bold packaging and quirky, self-aware advertising, carving out a distinct identity among competitors.",
+          insight: "Unique branding and messaging can make your project memorable in a crowded space.",
+          prompt: "What unique angle or identity can you create to stand out in a saturated market?"
+        },
+        {
+          id: 284,
+          title: "Stand Out in Saturated Markets",
+          content: "Differentiation is crucial in crowded industries to capture attention.",
+          example: "Oatly disrupted the plant-based milk market with bold packaging and quirky, self-aware advertising, carving out a distinct identity among competitors.",
+          insight: "Unique branding and messaging can make your project memorable in a crowded space.",
+          prompt: "What unique angle or identity can you create to stand out in a saturated market?"
+        },
+        {
+          id: 285,
+          title: "Turn Activism into Creativity",
+          content: "Combining art with activism amplifies critical social issues.",
+          example: "The Black Lives Matter murals, painted across streets worldwide, turned activism into a powerful visual statement, engaging millions.",
+          insight: "Creative activism fosters awareness and drives meaningful change.",
+          prompt: "How can you combine activism and art to make a statement?"
+        },
+        {
+          id: 286,
+          title: "Dive into Subcultures",
+          content: "Tapping into urban subcultures reveals innovative trends and untapped creativity.",
+          example: "Streetwear brands like Supreme draw inspiration from skateboarding, hip-hop, and graffiti culture, turning underground movements into global phenomena.",
+          insight: "Urban subcultures often drive mainstream innovation and identity.",
+          prompt: "What subculture can you explore to inspire fresh ideas?"
+        },
+        {
+          id: 287,
+          title: "Create Contemporary Legends",
+          content: "Reimagining myths through a modern lens engages contemporary audiences.",
+          example: "Neil Gaiman’s American Gods explores modern forms of worship, like technology and media, alongside ancient deities, reflecting cultural shifts.",
+          insight: "Retelling myths through current lenses keeps them relevant and engaging.",
+          prompt: "How can you reinterpret traditional narratives in light of modern culture?"
+        },
+        {
+          id: 288,
+          title: "Blend Global Influences",
+          content: "Combining elements from different cultures creates something fresh and universally appealing.",
+          example: "The viral success of K-pop, such as BTS, merges Korean cultural elements with global pop trends, creating a worldwide phenomenon.",
+          insight: "Fusing diverse cultural influences adds richness and broadens appeal.",
+          prompt: "How can you integrate cultural influences to create a globally resonant idea?"
+        },
+        {
+          id: 289,
+          title: "Amplify Underrepresented Voices",
+          content: "Highlighting diverse stories adds authenticity and expands cultural understanding.",
+          example: "Pose, a groundbreaking TV show, focuses on New York’s 1980s ballroom culture, celebrating LGBTQ+ and trans communities while bringing their stories to mainstream audiences.",
+          insight: "Showcasing underrepresented voices fosters inclusion and resonates with broader audiences.",
+          prompt: "Whose story can you amplify to bring fresh perspectives to your project?"
+        },
+        {
+          id: 290,
+          title: "Revisit and Reinvent Ideas",
+          content: "Having the courage to revisit an idea and reinterpret it can lead to unexpected brilliance.",
+          example: "10cc’s ‘I’m Not in Love’ began as a bossa nova-style song but was reimagined with innovative vocal loops and atmospheric soundscapes, turning it into a timeless classic.",
+          insight: "Revisiting and reinterpreting ideas allows for deeper exploration and refinement.",
+          prompt: "What project of yours could benefit from a complete reinterpretation?"
+        },
+        {
+          id: 291,
+          title: "Build from Fragments",
+          content: "Combining small, unrelated elements can create entirely new and cohesive works.",
+          example: "The Avalanches’ album Since I Left You used thousands of tiny samples from disparate sources to craft a unique sonic experience, blending nostalgia with innovation.",
+          insight: "Repurposing fragments creates originality from existing material.",
+          prompt: "What fragments or small ideas can you combine to create something entirely new?"
+        },
+        {
+          id: 292,
+          title: "Don’t Accept No for an Answer",
+          content: "Persistence in the face of rejection can lead to eventual success.",
+          example: "The Beatles were rejected by multiple record labels before securing a deal with EMI’s Parlophone label. They became one of the most influential bands in history.",
+          insight: "Believing in your idea and persisting through rejection can lead to groundbreaking achievements.",
+          prompt: "What idea of yours deserves persistence despite initial setbacks?"
+        }
 ]
 
 
